--- a/index.html
+++ b/index.html
@@ -44,5 +44,104 @@
             </ul>
         </nav>
     </header>
+    <!-- Chatchcopy -->
+    <div class="chatchcopy">
+        <div class="chatchcopy-container">
+            <p class="chatchcopy-title">最新のテクノロジーで社会課題を解決</p>
+            <p class="chatchcopy-item">Solving social issues with the latest technology</p>
+        </div>
+    </div>
+    <!-- thout -->
+    <div class="thought">
+        <h2 class="thought-item">株式会社TECHの想い</h2>
+        <p class="thought-item">あらゆる産業において、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する
+            新規参入者が登場し、ゲームチェンジが起ころうとしています。こうした中で、各企業は、競争力維持・強化のために、DXを
+            迅速に進めていくことが求められています。しかし、DXにおいて投資コストは非常にかかります。株式会社TECHでは
+            独自のオペレーションと人材育成により、他社よりも価格を抑えた開発を行います。
+        </p>
+    </div>
+    <!-- Survice -->
+    <div class="survice">
+        <h2 class="survice-item">サービス</h2>
+        <div class="survice1">
+            <img src="img/service1.png" alt="" class="survice-img">
+            <h3 class="survice-name">IT人材育成事業</h3>
+            <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+        </div>
+        <div class="survice2">
+            <img src="img/service2.png" alt="" class="survice-img">
+            <h3 class="survice-name">コーチング事業</h3>
+            <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
+        </div>
+        <div class="survice2">
+            <img src="img/service3.png" alt="" class="survice-img">
+            <h3 class="survice-name">ITコンサル事業</h3>
+            <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+        </div>
+        <div class="survice3">
+            <img src="img/service4.png" alt="" class="survice-img">
+            <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
+            <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+        </div>
+        <a href="service.html" class="btn"　id="btn-survice">サービス一覧をみる</a>
+    </div>
+    <!-- News -->
+    <div class="news">
+        <h2 class="news-item">ニュース</h2>
+        <a href="news.html" class="btn" id="btn-news">ニュース一覧をみる</a>
+        <p class="news-contents">2019/07/17 <strong>会社を創業しました。</strong></p>
+        <p class="news-contents">2020/04/01 <strong>資金調達を行いました。</strong></p>
+        <p class="news-contents">2020/10/01 <strong>東京新聞に掲載されました。</strong></p>
+    </div>
+    <!-- Blog -->
+    <div class="blog">
+        <h2 class="blog-item">社員ブログ</h2>
+        <div class="blog1">
+            <a href="index.html" class="btn-imag"></a>
+            <p class="days">2019/07/17</p>
+            <h3 class="blog-title">会社を創業した理由</h3>
+        </div>
+        <div class="blog2">
+            <a href="index.html" class="btn-imag"></a>
+            <p class="days">2019/11/11</p>
+            <h3 class="blog-title">ITエンジニアを育成する最強メソッド</h3>
+        </div>
+        <div class="blog3">
+            <a href="index.html" class="btn-imag"></a>
+            <p class="days">2020/08/01</p>
+            <h3 class="blog-title">コーチングによるモチベーション向上理論</h3>
+        </div>
+        <a href="blog.html" class="btn" id="btn-blog">社員ブログ一覧をみる</a>
+    </div>
+    <!-- Compaby -->
+    <div class="company">
+        <a href="company.html" class="btn" id="btn-company">会社概要</a>
+    </div>
+    <!-- Recruit -->
+    <div class="recruit">
+        <a href="recruit.html" class="btn" id="btn-recruit">採用情報</a>
+    </div>
+    <!-- Contact -->
+    <div class="contact">
+        <h2 class="contact-item">お問い合わせ</h2>
+        <p class="contact-detail">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+        <a href="contact.html" class="btn" id="btn-contact">お問い合わせ</a>
+    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <small>&copy;2020 TECH inc.</small>
+        <nav class="footer-nav">
+            <ul class="footer-nav-list">
+                <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </footer>
+
 </body>
 </html>
