--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <!-- header -->
     <header class="header">
         <h1 class="header-ttl">
-            <a href="index.html">
+            <a class="header-link" href="index.html">
                 TECH
             </a>
         </h1>
         <nav class="hedar-nav">
             <ul class="header-nav-list">
-                <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-                <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-                <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-                <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-                <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-                <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-                <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
+                <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
+                <li class="header-nav-item"><a class="header-link" href="news.html">ニュース</a></li>
+                <li class="header-nav-item"><a class="header-link" href="blog.html">社員ブログ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="company.html">会社概要</a></li>
+                <li class="header-nav-item"><a class="header-link" href="recruit.html">採用情報</a></li>
+                <li class="header-nav-item"><a class="header-link" href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
         <div class="menu" id="menu">
@@ -34,13 +34,13 @@
         </div>
         <nav class="drawer-nav">
             <ul class="drawer-nav-list">
-                <li class="drawer-nav-item"><a href="index.html">ホーム</a></li>
-                <li class="drawer-nav-item"><a href="service.html">事業内容</a></li>
-                <li class="drawer-nav-item"><a href="news.html">ニュース</a></li>
-                <li class="drawer-nav-item"><a href="blog.html">社員ブログ</a></li>
-                <li class="drawer-nav-item"><a href="company.html">会社概要</a></li>
-                <li class="drawer-nav-item"><a href="recruit.html">採用情報</a></li>
-                <li class="drawer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="news.html">ニュース</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="blog.html">社員ブログ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="company.html">会社概要</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="recruit.html">採用情報</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
     </header>
@@ -51,10 +51,10 @@
             <p class="chatchcopy-item">Solving social issues with the latest technology</p>
         </div>
     </div>
-    <!-- thout -->
-    <div class="thought">
-        <h2 class="thought-item">株式会社TECHの想い</h2>
-        <p class="thought-item">あらゆる産業において、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する
+    <!-- future -->
+    <div class="future">
+        <h2 class="future-title">株式会社TECHの想い</h2>
+        <p class="future-item">あらゆる産業において、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する
             新規参入者が登場し、ゲームチェンジが起ころうとしています。こうした中で、各企業は、競争力維持・強化のために、DXを
             迅速に進めていくことが求められています。しかし、DXにおいて投資コストは非常にかかります。株式会社TECHでは
             独自のオペレーションと人材育成により、他社よりも価格を抑えた開発を行います。
@@ -63,27 +63,29 @@
     <!-- Survice -->
     <div class="survice">
         <h2 class="survice-item">サービス</h2>
-        <div class="survice1">
-            <img src="img/service1.png" alt="" class="survice-img">
-            <h3 class="survice-name">IT人材育成事業</h3>
-            <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+        <div class="survice-contents">
+            <div class="survice1">
+                <img src="img/service1.png" alt="" class="survice-img">
+                <h3 class="survice-name">IT人材育成事業</h3>
+                <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+            </div>
+            <div class="survice2">
+                <img src="img/service2.png" alt="" class="survice-img">
+                <h3 class="survice-name">コーチング事業</h3>
+                <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
+            </div>
+            <div class="survice2">
+                <img src="img/service3.png" alt="" class="survice-img">
+                <h3 class="survice-name">ITコンサル事業</h3>
+                <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+            </div>
+            <div class="survice3">
+                <img src="img/service4.png" alt="" class="survice-img">
+                <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
+                <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+            </div>
         </div>
-        <div class="survice2">
-            <img src="img/service2.png" alt="" class="survice-img">
-            <h3 class="survice-name">コーチング事業</h3>
-            <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
-        </div>
-        <div class="survice2">
-            <img src="img/service3.png" alt="" class="survice-img">
-            <h3 class="survice-name">ITコンサル事業</h3>
-            <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
-        </div>
-        <div class="survice3">
-            <img src="img/service4.png" alt="" class="survice-img">
-            <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
-            <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
-        </div>
-        <a href="service.html" class="btn"　id="btn-survice">サービス一覧をみる</a>
+        <a class="btn"　id="btn-survice"　href="service.html">サービス一覧をみる</a>
     </div>
     <!-- News -->
     <div class="news">
