--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 TECH
             </a>
         </h1>
-        <nav class="hedar-nav">
+        <nav class="header-nav">
             <ul class="header-nav-list">
                 <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
                 <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
@@ -62,87 +62,125 @@
     </div>
     <!-- Survice -->
     <div class="survice">
-        <h2 class="survice-item">サービス</h2>
+        <h2 class="survice-ttl">サービス</h2>
         <div class="survice-contents">
-            <div class="survice1">
-                <img src="img/service1.png" alt="" class="survice-img">
-                <h3 class="survice-name">IT人材育成事業</h3>
-                <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
-            </div>
-            <div class="survice2">
-                <img src="img/service2.png" alt="" class="survice-img">
-                <h3 class="survice-name">コーチング事業</h3>
-                <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
-            </div>
-            <div class="survice2">
-                <img src="img/service3.png" alt="" class="survice-img">
-                <h3 class="survice-name">ITコンサル事業</h3>
-                <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
-            </div>
-            <div class="survice3">
-                <img src="img/service4.png" alt="" class="survice-img">
-                <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
-                <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
-            </div>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service1.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">IT人材育成事業</h3>
+                    <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service2.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">コーチング事業</h3>
+                    <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>            
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service3.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">ITコンサル事業</h3>
+                    <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service4.png" alt="" class="survice-img">
+                </div>    
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
+                    <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+                </div>
+            </section>
         </div>
         <a class="btn"　id="btn-survice"　href="service.html">サービス一覧をみる</a>
     </div>
     <!-- News -->
     <div class="news">
-        <h2 class="news-item">ニュース</h2>
-        <a href="news.html" class="btn" id="btn-news">ニュース一覧をみる</a>
-        <p class="news-contents">2019/07/17 <strong>会社を創業しました。</strong></p>
-        <p class="news-contents">2020/04/01 <strong>資金調達を行いました。</strong></p>
-        <p class="news-contents">2020/10/01 <strong>東京新聞に掲載されました。</strong></p>
+        <div class="news-header">
+            <h2 class="news-ttl">ニュース</h2>
+            <li href="news.html" class="btn" id="btn-news">ニュース一覧をみる</a>
+        </div>
+        <div class="nesw-content-list">
+            <li class="news-contents"><a class="news-link" href="index.html">2019/07/17 <strong>会社を創業しました。</strong></a></li>
+            <li class="news-contents"><a class="news-link" href="index.html">2020/04/01 <strong>資金調達を行いました。</strong></a></li>
+            <li class="news-contents"><a class="news-link" href="index.html">2020/10/01 <strong>東京新聞に掲載されました。</strong></a></li>
+        </div>
     </div>
     <!-- Blog -->
     <div class="blog">
-        <h2 class="blog-item">社員ブログ</h2>
-        <div class="blog1">
-            <a href="index.html" class="btn-imag"></a>
-            <p class="days">2019/07/17</p>
-            <h3 class="blog-title">会社を創業した理由</h3>
-        </div>
-        <div class="blog2">
-            <a href="index.html" class="btn-imag"></a>
-            <p class="days">2019/11/11</p>
-            <h3 class="blog-title">ITエンジニアを育成する最強メソッド</h3>
-        </div>
-        <div class="blog3">
-            <a href="index.html" class="btn-imag"></a>
-            <p class="days">2020/08/01</p>
-            <h3 class="blog-title">コーチングによるモチベーション向上理論</h3>
+        <h2 class="blog-ttl">社員ブログ</h2>
+        <div class="blog-contents">
+            <section class="blog-item-list">
+                <div class="blog-img">
+                    <a href="index.html" class="btn-imag"><img src="img/blog.png" class="blog-image"></a>
+                </div>
+                <div class="blog-item-sentence">
+                    <p class="days">2019/07/17</p>
+                    <h3 class="blog-title">会社を創業した理由</h3>
+                </div>
+            </section>
+            <section class="blog-item-list">
+                <div class="blog-img">
+                    <a href="index.html" class="btn-imag"><img src="img/blog.png" class="blog-image"></a>
+                </div>   
+                <div class="blog-item-sentence">
+                    <p class="days">2019/11/11</p>
+                    <h3 class="blog-title">ITエンジニアを育成する最強メソッド</h3>
+                </div>
+            </section>
+            <section class="blog-item-list">
+                <div class="blog-img">
+                    <a href="index.html" class="btn-imag"><img src="img/blog.png" class="blog-image"></a>
+                </div>
+                <div class="blog-item-sentence">
+                    <p class="days">2020/08/01</p>
+                    <h3 class="blog-title">コーチングによるモチベーション向上理論</h3>
+                </div>
+            </section>
         </div>
         <a href="blog.html" class="btn" id="btn-blog">社員ブログ一覧をみる</a>
     </div>
     <!-- Compaby -->
-    <div class="company">
-        <a href="company.html" class="btn" id="btn-company">会社概要</a>
-    </div>
+    <div class="btn-line">
+        <div class="company">
+            <a href="company.html" class="btn" id="btn-company">会社概要</a>
+        </div>
     <!-- Recruit -->
-    <div class="recruit">
-        <a href="recruit.html" class="btn" id="btn-recruit">採用情報</a>
+        <div class="recruit">
+            <a href="recruit.html" class="btn" id="btn-recruit">採用情報</a>
+        </div>
     </div>
     <!-- Contact -->
     <div class="contact">
-        <h2 class="contact-item">お問い合わせ</h2>
+        <h2 class="contact-ttl">お問い合わせ</h2>
         <p class="contact-detail">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
         <a href="contact.html" class="btn" id="btn-contact">お問い合わせ</a>
     </div>
     <!-- Footer -->
     <footer class="footer">
-        <small>&copy;2020 TECH inc.</small>
-        <nav class="footer-nav">
-            <ul class="footer-nav-list">
-                <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
-                <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
-                <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
-                <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
-                <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
-                <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
-                <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
-            </ul>
-        </nav>
+        <div class="footer-contents">
+            <small>&copy;2020 TECH inc.</small>
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                    <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                    <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                    <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                    <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                    <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                    <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
     </footer>
 
 </body>
