--- a/service.html
+++ b/service.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/service.css">
 </head>
 <body>
+    <!-- header -->
+    <header class="header">
+        <h1 class="header-ttl">
+            <a class="header-link" href="index.html">
+                TECH
+            </a>
+        </h1>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
+                <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
+                <li class="header-nav-item"><a class="header-link" href="news.html">ニュース</a></li>
+                <li class="header-nav-item"><a class="header-link" href="blog.html">社員ブログ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="company.html">会社概要</a></li>
+                <li class="header-nav-item"><a class="header-link" href="recruit.html">採用情報</a></li>
+                <li class="header-nav-item"><a class="header-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <div class="menu" id="menu">
+            <span class="menu-top"></span>
+            <span class="menu-middle"></span>
+            <span class="menu-bottom"></span>
+        </div>
+        <nav class="drawer-nav">
+            <ul class="drawer-nav-list">
+                <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="news.html">ニュース</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="blog.html">社員ブログ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="company.html">会社概要</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="recruit.html">採用情報</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Title -->
+    <div class="chatchcopy">
+        <div class="chatchcopy-container">
+            <p class="chatchcopy-title">事業内容</p>
+        </div>
+    </div>
+    <!-- Survice -->
+    <div class="survice">
+        <div class="survice-contents">
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service1.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">IT人材育成事業</h3>
+                    <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service2.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">コーチング事業</h3>
+                    <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>            
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service3.png" alt="" class="survice-img">
+                </div>
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">ITコンサル事業</h3>
+                    <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+                </div>
+            </section>
+            <section class="survis-item-list">
+                <div class="survice-img">
+                    <img src="img/service4.png" alt="" class="survice-img">
+                </div>    
+                <div class="survice-item-sentence">
+                    <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
+                    <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- Contact -->
+    <div class="contact">
+        <h2 class="contact-ttl">お問い合わせ</h2>
+        <p class="contact-detail">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+        <a href="contact.html" class="btn" id="btn-contact">お問い合わせ</a>
+    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-contents">
+            <small>&copy;2020 TECH inc.</small>
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                    <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                    <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                    <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                    <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                    <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                    <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
+</body>
+</html>
     
 </body>
 </html>
