コーポレートサイト完成

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <!-- header -->
     <header class="header">
@@ -32,7 +35,7 @@
             <span class="menu-middle"></span>
             <span class="menu-bottom"></span>
         </div>
-        <nav class="drawer-nav">
+        <nav class="drawer-nav" id="drawer-nav">
             <ul class="drawer-nav-list">
                 <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
                 <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
@@ -79,7 +82,7 @@
                 </div>
                 <div class="survice-item-sentence">
                     <h3 class="survice-name">コーチング事業</h3>
-                    <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>            
+                    <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
                 </div>
             </section>
             <section class="survis-item-list">
@@ -94,14 +97,14 @@
             <section class="survis-item-list">
                 <div class="survice-img">
                     <img src="img/service4.png" alt="" class="survice-img">
-                </div>    
+                </div>
                 <div class="survice-item-sentence">
                     <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
                     <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
                 </div>
             </section>
         </div>
-        <a class="btn"　id="btn-survice"　href="service.html">サービス一覧をみる</a>
+        <a class="btn" 　id="btn-survice" 　href="service.html">サービス一覧をみる</a>
     </div>
     <!-- News -->
     <div class="news">
@@ -110,9 +113,12 @@
             <li href="news.html" class="btn" id="btn-news">ニュース一覧をみる</a>
         </div>
         <div class="nesw-content-list">
-            <li class="news-contents"><a class="news-link" href="index.html">2019/07/17 <strong>会社を創業しました。</strong></a></li>
-            <li class="news-contents"><a class="news-link" href="index.html">2020/04/01 <strong>資金調達を行いました。</strong></a></li>
-            <li class="news-contents"><a class="news-link" href="index.html">2020/10/01 <strong>東京新聞に掲載されました。</strong></a></li>
+            <li class="news-contents"><a class="news-link" href="index.html">2019/07/17 <strong>会社を創業しました。</strong></a>
+            </li>
+            <li class="news-contents"><a class="news-link" href="index.html">2020/04/01 <strong>資金調達を行いました。</strong></a>
+            </li>
+            <li class="news-contents"><a class="news-link" href="index.html">2020/10/01
+                    <strong>東京新聞に掲載されました。</strong></a></li>
         </div>
     </div>
     <!-- Blog -->
@@ -131,7 +137,7 @@
             <section class="blog-item-list">
                 <div class="blog-img">
                     <a href="index.html" class="btn-imag"><img src="img/blog.png" class="blog-image"></a>
-                </div>   
+                </div>
                 <div class="blog-item-sentence">
                     <p class="days">2019/11/11</p>
                     <h3 class="blog-title">ITエンジニアを育成する最強メソッド</h3>
@@ -154,7 +160,7 @@
         <div class="company">
             <a href="company.html" class="btn" id="btn-company">会社概要</a>
         </div>
-    <!-- Recruit -->
+        <!-- Recruit -->
         <div class="recruit">
             <a href="recruit.html" class="btn" id="btn-recruit">採用情報</a>
         </div>
@@ -182,6 +188,7 @@
             </nav>
         </div>
     </footer>
-
+    <script src="js/main.js"></script>
 </body>
+
 </html>
