--- a/service.html
+++ b/service.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/service.css">
 </head>
+
 <body>
     <!-- header -->
     <header class="header">
@@ -32,7 +35,7 @@
             <span class="menu-middle"></span>
             <span class="menu-bottom"></span>
         </div>
-        <nav class="drawer-nav">
+        <nav class="drawer-nav" id="drawer-nav">
             <ul class="drawer-nav-list">
                 <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
                 <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
@@ -50,43 +53,43 @@
             <p class="chatchcopy-title">事業内容</p>
         </div>
     </div>
-    <!-- Survice -->
-    <div class="survice">
-        <div class="survice-contents">
-            <section class="survis-item-list">
-                <div class="survice-img">
-                    <img src="img/service1.png" alt="" class="survice-img">
+    <!-- Service -->
+    <div class="service">
+        <div class="service-contents">
+            <section class="service-item-list">
+                <div class="service-img">
+                    <img src="img/service1.png" alt="" class="service-img">
                 </div>
-                <div class="survice-item-sentence">
-                    <h3 class="survice-name">IT人材育成事業</h3>
-                    <p class="survice-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
-                </div>
-            </section>
-            <section class="survis-item-list">
-                <div class="survice-img">
-                    <img src="img/service2.png" alt="" class="survice-img">
-                </div>
-                <div class="survice-item-sentence">
-                    <h3 class="survice-name">コーチング事業</h3>
-                    <p class="survice-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>            
+                <div class="service-item-sentence">
+                    <h3 class="service-name">IT人材育成事業</h3>
+                    <p class="service-detail">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
                 </div>
             </section>
-            <section class="survis-item-list">
-                <div class="survice-img">
-                    <img src="img/service3.png" alt="" class="survice-img">
+            <section class="service-item-list">
+                <div class="service-img">
+                    <img src="img/service2.png" alt="" class="service-img">
                 </div>
-                <div class="survice-item-sentence">
-                    <h3 class="survice-name">ITコンサル事業</h3>
-                    <p class="survice-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+                <div class="service-item-sentence">
+                    <h3 class="service-name">コーチング事業</h3>
+                    <p class="service-detail">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
                 </div>
             </section>
-            <section class="survis-item-list">
-                <div class="survice-img">
-                    <img src="img/service4.png" alt="" class="survice-img">
-                </div>    
-                <div class="survice-item-sentence">
-                    <h3 class="survice-name">デジタルトランスインフォメーション事業</h3>
-                    <p class="survice-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+            <section class="service-item-list">
+                <div class="service-img">
+                    <img src="img/service3.png" alt="" class="service-img">
+                </div>
+                <div class="service-item-sentence">
+                    <h3 class="service-name">ITコンサル事業</h3>
+                    <p class="service-detail">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+                </div>
+            </section>
+            <section class="service-item-list">
+                <div class="service-img">
+                    <img src="img/service4.png" alt="" class="service-img">
+                </div>
+                <div class="service-item-sentence">
+                    <h3 class="service-name">デジタルトランスインフォメーション事業</h3>
+                    <p class="service-detail">人々の生活をより良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
                 </div>
             </section>
         </div>
@@ -114,9 +117,11 @@
             </nav>
         </div>
     </footer>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
 
 </body>
-</html>
-    
-</body>
+
 </html>
