--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/blog.css">
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <h1 class="header-ttl">
+            <a class="header-link" href="index.html">
+                TECH
+            </a>
+        </h1>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
+                <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
+                <li class="header-nav-item"><a class="header-link" href="news.html">ニュース</a></li>
+                <li class="header-nav-item"><a class="header-link" href="blog.html">社員ブログ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="company.html">会社概要</a></li>
+                <li class="header-nav-item"><a class="header-link" href="recruit.html">採用情報</a></li>
+                <li class="header-nav-item"><a class="header-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <div class="menu" id="menu">
+            <span class="menu-top"></span>
+            <span class="menu-middle"></span>
+            <span class="menu-bottom"></span>
+        </div>
+        <nav class="drawer-nav" id="drawer-nav">
+            <ul class="drawer-nav-list">
+                <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="news.html">ニュース</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="blog.html">社員ブログ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="company.html">会社概要</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="recruit.html">採用情報</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Title -->
+    <div class="chatchcopy">
+        <div class="chatchcopy-container">
+            <p class="chatchcopy-title">社員ブログ</p>
+        </div>
+    </div>
+
+    <!-- Blog -->
+    <div class="blog">
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">2019/07/17</p>
+            <h2 class="blog-item-ttl">会社を創業した理由</h2>
+        </article>
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">2019/11/11</p>
+            <h2 class="blog-item-ttl">ITエンジニアを育成する最強メソッド</h2>
+        </article>
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">2020/08/01</p>
+            <h2 class="blog-item-ttl">コーチングによるモチベーション向上理論</h2>
+        </article>
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">202/09/10</p>
+            <h2 class="blog-item-ttl">プログラミング言語習得論</h2>
+        </article>
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">2020/12/01</p>
+            <h2 class="blog-item-ttl">エンジニア採用における注意点</h2>
+        </article>
+        <article class="blog-list">
+            <a href="#" class="blog-item-img">
+                <img src="img/blog.png" />
+            </a>
+            <p class="blog-item-date">2021/01/01</p>
+            <h2 class="blog-item-ttl">今年の抱負</h2>
+        </article>
+    </div>
+
+    <!-- Contact -->
+    <div class="contact">
+        <h2 class="contact-ttl">お問い合わせ</h2>
+        <p class="contact-detail">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+        <a href="contact.html" class="btn" id="btn-contact">お問い合わせ</a>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-contents">
+            <small>&copy;2020 TECH inc.</small>
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                    <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                    <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                    <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                    <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                    <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                    <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
+
 </body>
+
 </html>
