--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <h1 class="header-ttl">
+            <a class="header-link" href="index.html">
+                TECH
+            </a>
+        </h1>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
+                <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
+                <li class="header-nav-item"><a class="header-link" href="news.html">ニュース</a></li>
+                <li class="header-nav-item"><a class="header-link" href="blog.html">社員ブログ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="company.html">会社概要</a></li>
+                <li class="header-nav-item"><a class="header-link" href="recruit.html">採用情報</a></li>
+                <li class="header-nav-item"><a class="header-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <div class="menu" id="menu">
+            <span class="menu-top"></span>
+            <span class="menu-middle"></span>
+            <span class="menu-bottom"></span>
+        </div>
+        <nav class="drawer-nav" id="drawer-nav">
+            <ul class="drawer-nav-list">
+                <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="news.html">ニュース</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="blog.html">社員ブログ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="company.html">会社概要</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="recruit.html">採用情報</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Title -->
+    <div class="chatchcopy">
+        <div class="chatchcopy-container">
+            <p class="chatchcopy-title">お問い合わせ</p>
+        </div>
+    </div>
+
+    <!-- ContactForm -->
+    <form class="form" name="contact" method="POST">
+        <div class="form-item">
+            <label class="form-item-label">
+                会社名<br>
+                <input type="text" name="company" class="form-item-input">
+            </label>
+        </div>
+        <div class="form-item">
+            <label class="form-item-label">
+                お名前<span class="form-item-label-required">*</span><br>
+                <input type="text" name="name" class="form-item-input" required>
+            </label>
+        </div>
+        <div class="form-item">
+            <label class="form-item-label">
+                メールアドレス<span class="form-item-label-required">*</span><br>
+                <input type="email" name="email" class="form-item-input" required>
+            </label>
+        </div>
+        <div class="form-item">
+            <label class="form-item-label">
+                お問い合わせ内容<span class="form-item-label-required">*</span><br>
+                <textarea name="textarea" class="form-item-textarea" required></textarea>
+            </label>
+
+        </div>
+        <div class="form-btn">
+            <input type="submit" class="form-btn-input" value="お申し込み">
+        </div>
+
+    </form>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-contents">
+            <small>&copy;2020 TECH inc.</small>
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                    <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                    <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                    <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                    <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                    <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                    <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
