--- a/recruit.html
+++ b/recruit.html
@@ -1,13 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>株式会社TECH</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/recruit.css">
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="header">
+        <h1 class="header-ttl">
+            <a class="header-link" href="index.html">
+                TECH
+            </a>
+        </h1>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-link" href="index.html">ホーム</a></li>
+                <li class="header-nav-item"><a class="header-link" href="service.html">事業内容</a></li>
+                <li class="header-nav-item"><a class="header-link" href="news.html">ニュース</a></li>
+                <li class="header-nav-item"><a class="header-link" href="blog.html">社員ブログ</a></li>
+                <li class="header-nav-item"><a class="header-link" href="company.html">会社概要</a></li>
+                <li class="header-nav-item"><a class="header-link" href="recruit.html">採用情報</a></li>
+                <li class="header-nav-item"><a class="header-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+        <div class="menu" id="menu">
+            <span class="menu-top"></span>
+            <span class="menu-middle"></span>
+            <span class="menu-bottom"></span>
+        </div>
+        <nav class="drawer-nav" id="drawer-nav">
+            <ul class="drawer-nav-list">
+                <li class="drawer-nav-item"><a class="drawer-link" href="index.html">ホーム</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="service.html">事業内容</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="news.html">ニュース</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="blog.html">社員ブログ</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="company.html">会社概要</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="recruit.html">採用情報</a></li>
+                <li class="drawer-nav-item"><a class="drawer-link" href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Title -->
+    <div class="chatchcopy">
+        <div class="chatchcopy-container">
+            <p class="chatchcopy-title">採用情報</p>
+        </div>
+    </div>
+
+    <!-- Recruit -->
+    <div class="recruit">
+        <div class="new_graduates">
+            <div class="new_graduates-ttl">
+                <h3>新卒採用</h3>
+                <p class="new_graduates-details">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+            </div>
+            <table class="new_graduates-table">
+                <tr>
+                    <th>内容</th>
+                    <td>ITコンサルと開発</td>
+                </tr>
+                <tr>
+                    <th>勤務地</th>
+                    <td>東京都渋谷区神宮前</td>
+                </tr>
+                <tr>
+                    <th>給与</th>
+                    <td>30万円〜</td>
+                </tr>
+                <tr>
+                    <th>福利厚生</th>
+                    <td>家賃補助</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="career_recruitment">
+            <div class="career_recruitment-ttl">
+                <h3>キャリア採用</h3>
+                <p class="career_recruitment-details">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+            </div>
+            <table class="career_recruitment-table">
+                <tr>
+                    <th>内容</th>
+                    <td>ITコンサルと開発</td>
+                </tr>
+                <tr>
+                    <th>勤務地</th>
+                    <td>東京都渋谷区神宮前</td>
+                </tr>
+                <tr>
+                    <th>給与</th>
+                    <td>50万円〜</td>
+                </tr>
+                <tr>
+                    <th>福利厚生</th>
+                    <td>家賃補助</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <!-- Contact -->
+    <div class="contact">
+        <h2 class="contact-ttl">お問い合わせ</h2>
+        <p class="contact-detail">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+        <a href="contact.html" class="btn" id="btn-contact">お問い合わせ</a>
+    </div>
+
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-contents">
+            <small>&copy;2020 TECH inc.</small>
+            <nav class="footer-nav">
+                <ul class="footer-nav-list">
+                    <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+                    <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+                    <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+                    <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+                    <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+                    <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+                    <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
+
 </body>
+
 </html>
